--- a/WinFormsApp/Resource.hr.resx
+++ b/WinFormsApp/Resource.hr.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
+  <!-- 
+    Microsoft ResX Schema 
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -117,7 +117,73 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="msMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <data name="Cancel" xml:space="preserve">
+    <value>Odustani</value>
+  </data>
+  <data name="ConfirmExit" xml:space="preserve">
+    <value>Potvrdi izlaz</value>
+  </data>
+  <data name="Croatian" xml:space="preserve">
+    <value>Hrvatski</value>
+  </data>
+  <data name="English" xml:space="preserve">
+    <value>Engleski</value>
+  </data>
+  <data name="Favs" xml:space="preserve">
+    <value>Favoriti</value>
+  </data>
+  <data name="Help" xml:space="preserve">
+    <value>Pomoć</value>
+  </data>
+  <data name="InfoSelFavPlayers" xml:space="preserve">
+    <value>Molim odaberite 3 (tri) favorit igrača.</value>
+  </data>
+  <data name="InfoSelFavTeam" xml:space="preserve">
+    <value>Molim odaberite favorit tim.</value>
+  </data>
+  <data name="LangAndReg" xml:space="preserve">
+    <value>Jezik i regija</value>
+  </data>
+  <data name="MatchStats" xml:space="preserve">
+    <value>Statistika meča</value>
+  </data>
+  <data name="Men" xml:space="preserve">
+    <value>Muško</value>
+  </data>
+  <data name="PlayerStats" xml:space="preserve">
+    <value>Statistika igrača</value>
+  </data>
+  <data name="Print" xml:space="preserve">
+    <value>Ispis</value>
+  </data>
+  <data name="PromptExit" xml:space="preserve">
+    <value>Želite li zaista izaći?</value>
+  </data>
+  <data name="Quit" xml:space="preserve">
+    <value>Izađi</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Spremi</value>
+  </data>
+  <data name="SaveFavs" xml:space="preserve">
+    <value>Spremi favorite</value>
+  </data>
+  <data name="SelFavPlayers" xml:space="preserve">
+    <value>Odaberi favorit igrače:</value>
+  </data>
+  <data name="SelFavTeam" xml:space="preserve">
+    <value>Odaberi favorit tim:</value>
+  </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Postavke</value>
+  </data>
+  <data name="WCGender" xml:space="preserve">
+    <value>Svjetsko prvenstvo - spol</value>
+  </data>
+  <data name="Women" xml:space="preserve">
+    <value>Žensko</value>
+  </data>
+  <data name="WorldCup" xml:space="preserve">
+    <value>Svjetsko prvenstvo</value>
+  </data>
 </root>
