Add player and match stat tabs and implement printing
- Add a few more images

--- a/WinFormsApp/Resource.hr.resx
+++ b/WinFormsApp/Resource.hr.resx
@@ -117,14 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Attendance" xml:space="preserve">
+    <value>Posjećenost</value>
+  </data>
+  <data name="AwayTeam" xml:space="preserve">
+    <value>Gostujući Tim</value>
+  </data>
   <data name="Cancel" xml:space="preserve">
     <value>Odustani</value>
   </data>
   <data name="ConfirmExit" xml:space="preserve">
     <value>Potvrdi izlaz</value>
   </data>
+  <data name="Controls" xml:space="preserve">
+    <value>Kontrole</value>
+  </data>
   <data name="Croatian" xml:space="preserve">
     <value>Hrvatski</value>
+  </data>
+  <data name="DateTime" xml:space="preserve">
+    <value>Datum/Vrijeme</value>
   </data>
   <data name="English" xml:space="preserve">
     <value>Engleski</value>
@@ -132,11 +144,20 @@
   <data name="Favs" xml:space="preserve">
     <value>Favoriti</value>
   </data>
+  <data name="Goals" xml:space="preserve">
+    <value>Golovi</value>
+  </data>
   <data name="Help" xml:space="preserve">
     <value>Pomoć</value>
   </data>
+  <data name="HomeTeam" xml:space="preserve">
+    <value>Domaći Tim</value>
+  </data>
+  <data name="Image" xml:space="preserve">
+    <value>Slika</value>
+  </data>
   <data name="InfoSelFavPlayers" xml:space="preserve">
-    <value>Molim odaberite barem 1 (jedan) favorit igrača.</value>
+    <value>Molim odaberite barem 1 (jedan) favorit igrač.</value>
   </data>
   <data name="InfoSelFavTeam" xml:space="preserve">
     <value>Molim odaberite favorit tim.</value>
@@ -149,6 +170,12 @@
   </data>
   <data name="Men" xml:space="preserve">
     <value>Muško</value>
+  </data>
+  <data name="Player" xml:space="preserve">
+    <value>Igrač</value>
+  </data>
+  <data name="PlayerName" xml:space="preserve">
+    <value>Ime Igrača</value>
   </data>
   <data name="PlayerStats" xml:space="preserve">
     <value>Statistika igrača</value>
@@ -177,6 +204,9 @@
   <data name="Settings" xml:space="preserve">
     <value>Postavke</value>
   </data>
+  <data name="Venue" xml:space="preserve">
+    <value>Mjesto</value>
+  </data>
   <data name="WCGender" xml:space="preserve">
     <value>Svjetsko prvenstvo - spol</value>
   </data>
@@ -185,5 +215,8 @@
   </data>
   <data name="WorldCup" xml:space="preserve">
     <value>Svjetsko prvenstvo</value>
+  </data>
+  <data name="YellowCards" xml:space="preserve">
+    <value>Žuti Kartoni</value>
   </data>
 </root>
