--- a/Localization/Resource.resx
+++ b/Localization/Resource.resx
@@ -129,6 +129,9 @@
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="Close" xml:space="preserve">
+    <value>Close</value>
+  </data>
   <data name="ConfirmExit" xml:space="preserve">
     <value>Confirm exit</value>
   </data>
